kubernetes/iiif/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iiif-gateway
  namespace: etna
spec:
  selector:
    matchLabels:
      app: iiif-gateway
  replicas: 1
  template:
    metadata:
      name: iiif-gateway
      namespace: etna
      labels:
        app:
          iiif-gateway
    spec:
      serviceAccountName: gateway-sa
      volumes:
        - name: iiif-gateway-config
          configMap:
            name: iiif-gateway-config
      containers:
        - name: iiif-gateway
          image: public.ecr.aws/v3w7q3a1/iiif-gateway:latest
          imagePullPolicy: Always
          ports:
            - name: gateway-port
              containerPort: 8080
          volumeMounts:
            - mountPath: /config/
              name: iiif-gateway-config
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: iiif-gateway-service
  namespace: etna
  labels:
    app: iiif-gateway
spec:
  type: ClusterIP
  selector:
    app: iiif-gateway
  ports:
    - name: gateway-port
      port: 8080
      targetPort: 8080
