kubernetes/iiif/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iiif-ingress-staging
  namespace: etna
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  tls:
    - hosts:
        - rosetta-staging.k-int.com
      secretName: tls-secret-rosetta-staging
  rules:
    - host: rosetta-staging.k-int.com
      http:
        paths:
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: iiif-gateway-service
                port:
                  name: gateway-port
